# basecamp-bench

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  NOTICE  README.md  basecamp-bench-report.html  bench.example.toml  pyproject.toml  run_bench.py  temp_simplify.md
.github/ISSUE_TEMPLATE/: contract-change.md
.github/workflows/: ci.yml
Repo/: DESIGN.md
basecamp_bench/: __init__.py  adapters.py  cli.py  config.py  contracts.py  execution.py  layout.py  leaderboard.py  locks.py  manifest.py  manifest_export.py  naming.py  pricing.py  processes.py  prompts.py  reference_pack.py  report_rendering.py  reporting.py  reporting_model.py  runner.py  safety.py  scheduling.py  validation.py
baseline/: README.md  baseline-manifest.json  commentary.json  report.html
benchmarks/: README.md  reference-pack.json
benchmarks/be/: contract.json  eval.md  prompt.md
benchmarks/fe/: contract.json  eval.md  prompt.md
containers/: Dockerfile  README.md
docs/: ASSETS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISOLATION.md  METHODOLOGY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md
plans/: deterministic-conformance-evaluator-plan.md
schemas/: evaluation-contract.schema.json  judge-result.schema.json  leaderboard.schema.json  reference-pack.schema.json  run-manifest.schema.json
tests/: __init__.py  _reporting_fixtures.py  _support.py  test_adapters.py  test_baseline.py  test_cli.py  test_config.py  test_contracts.py  test_e2e.py  test_leaderboard.py  test_locks.py  test_manifest.py  test_naming.py  test_pricing.py  test_processes.py  test_prompts.py  test_reference_pack.py  test_reporting.py  test_reporting_math.py  test_reporting_render.py  test_runner.py  test_safety.py  test_scheduling.py  test_schemas.py  test_validation.py
tests/fixtures/: fake_agent.py
(+51 files in other folders)
