[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "basecamp-bench"
version = "1.0.0a1"
description = "Reproducible coding-agent benchmark for Basecamp-style product work"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Basecamp Bench contributors" }]
keywords = ["agents", "benchmark", "evaluation", "basecamp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "jsonschema>=4.23,<5",
  "mypy>=1.15,<2",
  "ruff>=0.11,<1",
]

[project.scripts]
basecamp-bench = "basecamp_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["basecamp_bench"]

[tool.hatch.build.targets.sdist]
include = [
  "/basecamp_bench",
  "/benchmarks",
  "/docs",
  "/Repo",
  "/schemas",
  "/tests",
  "/bench.example.toml",
  "/LICENSE",
  "/NOTICE",
  "/README.md",
  "/run_bench.py",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["basecamp_bench"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.coverage.run]
branch = true
source = ["basecamp_bench"]
